--- a/source/plugins/core/metadata.yml
+++ b/source/plugins/core/metadata.yml
@@ -19,6 +19,13 @@ inputs:
     type: token
     required: true
 
+  # CUSTOM CONTENT
+  my-age:
+    description: User age
+    type: string
+    required: true
+
+
   user:
     description: |
       GitHub username
